--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-router-dom": "^5.3.3",
+    "i18next": "^23.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^13.0.3",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "styled-components": "^6.0.5",
